--- a/titanic_utils/pyproject.toml
+++ b/titanic_utils/pyproject.toml
@@ -1,15 +1,13 @@
 [tool.poetry]
-name = "titanic"
-version = "1.0"
-description = "Project to predict survivors of the titanic"
+name = "titanic-utils"
+version = "0.1.0"
+description = ""
 authors = ["OmarJehovani <omar@itsa.edu.mx>"]
-license = "MIT"
 readme = "README.md"
+packages = [{include = "titanic_utils"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = "^2.28.1"
-pendulum = "^2.1.2"
 
 
 [build-system]
